--- a/react-app/src/components/dev-timer-report/DevTimerReport.css
+++ b/react-app/src/components/dev-timer-report/DevTimerReport.css
@@ -22,9 +22,11 @@
 }
 
 .tab-content {
-  margin-top: 16px;
+  margin-top: 0px;
 }
 
 .button-container {
-  margin-top: 24px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0;
 }
