--- a/react-app/src/components/tab-navigation/TabNavigation.css
+++ b/react-app/src/components/tab-navigation/TabNavigation.css
@@ -1,7 +1,8 @@
 .tab-navigation {
   display: flex;
   border-bottom: 1px solid var(--vscode-panel-border);
-  margin-bottom: 16px;
+  margin-bottom: 8px;
+  width: 100%;
 }
 
 .tab-button {
@@ -13,7 +14,9 @@
   font-family: var(--vscode-font-family);
   font-size: var(--vscode-font-size);
   position: relative;
-  margin-right: 8px;
+  flex: 1;
+  text-align: center;
+  margin-right: 0;
 }
 
 .tab-button.active {
