--- a/react-app/src/components/shared/PlatformActivityList.css
+++ b/react-app/src/components/shared/PlatformActivityList.css
@@ -1,5 +1,5 @@
 .platform-activity-container {
-  padding: 10px 0;
+  padding: 0;
 }
 
 .platform-bars {
@@ -7,7 +7,7 @@
 }
 
 .platform-bar-item {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .platform-header {
