feat: :sparkles: añadir función para obtener el lenguaje más usado en estadísticas diarias y semanales

--- a/react-app/src/styles/Globals.css
+++ b/react-app/src/styles/Globals.css
@@ -1,6 +1,6 @@
 :root {
-  --sofka-time-codder-primary: #4caf50;
-  --sofka-time-coder-accent: #cc6d00;
+  --sofka-time-codder-primary: #18d41f;
+  --sofka-time-coder-accent: #e98411;
 }
 
 body, html {
