--- a/react-app/src/styles/Globals.css
+++ b/react-app/src/styles/Globals.css
@@ -14,7 +14,7 @@ body, html {
   height: 100%;
 }
 
-.devtimer-app {
+.timecoder-app {
   display: flex;
   flex-direction: column;
   min-height: 100%;
